# concall-summarizer

./: app.py  dev.sh  pyproject.toml  requirements.txt  run.sh
backend/: CHANGELOG.md  app.py  dev.sh  pyproject.toml
backend/apps/: __init__.py
backend/apps/ollama/: extract_data.py  summarize_data.py
backend/routes/: __init__.py
backend/routes/fetch_data/: fetch_data.py
backend/routes/ollama/: ollama.py
backend/routes/search/: search.py
backend/utils/: CONSTANTS.py  file_cache.json  file_cache.py  models.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: SearchBar.tsx
frontend/src/i18n_languages/: en.ts  index.ts
frontend/src/pages/: Home.tsx  Search.tsx  index.ts
frontend/src/redux/: store.ts
frontend/src/redux/slices/: ScreenerSlice.ts
frontend/src/types/: screenerTypes.ts
frontend/src/utils/: constants.ts
routes/fetch_data/: __init__.py
