[tool.poetry]
name = "concall-summarizer"
version = "0.1.0"
description = ""
authors = ["anand-kamble <anandmk837@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
