[tool.poetry]
name = "concall-summarizer"
version = "0.1.0"
description = ""
authors = ["anand-kamble <anandmk837@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
requests = "^2.32.3"
numpy = "^2.1.3"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
commitizen = "^4.0.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
