[tool.poetry]
name = "concall-summarizer"
version = "0.1.0"
description = ""
authors = ["anand-kamble <anandmk837@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
requests = "^2.32.3"
numpy = "^2.1.3"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
commitizen = "^4.0.0"
pyppeteer = "^2.0.0"
litellm = "^1.53.1"
pypdf2 = "^3.0.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
